@@ -17,6 +17,7 @@ Build-Depends-Indep:
  libmodule-depends-perl (>= 0.15),
  libparse-debcontrol-perl,
  libparse-debianchangelog-perl,
+ libsoftware-license-perl,
  libtest-compile-perl,
  libtest-deep-perl,
  libtest-differences-perl,
@@ -55,6 +56,7 @@ Depends: debhelper (>= 7), ${perl:Depends}, ${misc:Depends},
  libmodule-depends-perl (>= 0.15),
  libparse-debcontrol-perl,
  libparse-debianchangelog-perl,
+ libsoftware-license-perl,
  libtie-ixhash-perl,
  libwww-mechanize-perl,
  libyaml-perl
